# transition_detection

./: .gitignore  .pypirc  README.md  clean_pt_with_no_stillness_before_after.py  comments.docx  elimination1.py  find_stillness.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  ~$mments.docx
docs/: about.md  index.md
site/: 404.html  index.html  search.html  sitemap.xml
site/about/: index.html
site/search/: search_index.json
src/transition_detection/: LICENSE  MANIFEST.in  PT_next_to_lying.py  clean_pt_with_no_stillness_before_after.py  delete_still_periods.py  elimination1.py  elimination2.py  files_lists.py  find_pt_with_theta.py  find_sit_to_stand.py  find_stillness.py  is_empty.py  load_data.py  main.py  preprocessing.py  pt_detection.py  requirements.txt  sitting_segements_fitting_standards .py  sitting_segements_fitting_standards.py  statistics.py  test_types.py
tests/: test_clean_pt.py  test_delete_still_periods.py  test_elimination1.py  test_elimination2.py  test_find_stillness.py  tests.py
