    [metadata]
    name = transition_detection
    version = 0.0.1
    author = Eden Elbaz, Maayan Ovadia, Shaked Turk, Khen Heller
    author_email = edenel0109@gmail.com, maayanova@gmail.com, shaked17turk@gmail.com, khenheller@mail.tau.ac.il
    description = Automatically and reliably detects transitions to and from sitting to standing from real-world recordings obtained from a wearable inertial measurement unit (IMU) placed on the lower back
    long_description = file: README.md, CHANGELOG.md, LICENSE
    long_description_content_type = text/markdown
    keywords = Transition detection, parkinson
    url = https://github.com/khenheller/transition_detection
    project_urls =
        Bug Tracker = https://github.com/khenheller/transition_detection/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

    [options]
    package_dir =
        = src
    packages = find:
    python_requires = >=3.6
    install_requires =
        numpy
        pandas
        scipy
        matplotlib
        seaborn

    [options.extras_require]
    dev = black; flake8; pytest
    dist = build; twine
    docs = mkdocs

    [options.packages.find]
    where = src